[package]
name = "pongaok"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.9", features = ["json"] }
rqlite-rs = "0.4.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validator = { version = "0.19.0", features = ["derive"] }
